# xncview

./: .gitattributes  .travis.yml  MANIFEST.in  README.rst  environment.yaml  meta.yaml  setup.cfg  setup.py
src/xncview/: __init__.py  _version.py  api.py  cli.py  interpret_cf.py  widget.py  xncview.py
test/: test_dimension_widget.py  test_import.py  test_widget.py
