[metadata]
name = xncview
description = Xarray-based quick NetCDF file viewer
long_description = file: README.rst
license = Apache v2.0
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    xncview = xncview.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = src/xncview/_version.py
versionfile_build = xncview/_version.py
tag_prefix =
parentdir_prefix = xncview-
